# FLARE

./: .dockerignore  .gitignore  README.md  clientapp.Dockerfile  link-node.requirements.txt  local-sim.Dockerfile  pyproject.toml  requirements.txt  serverapp.Dockerfile  superlink.Dockerfile  supernode.Dockerfile
byebye_badclients/: __init__.py  client_app.py  client_reputation.py  result_processing.py  server_app.py  task.py  util.py
plots/mnist/: accuracy.csv  f1-scores.csv  precision_scores.csv  recall_scores.csv  weighted_avg_evaluation_loss.csv  weighted_avg_loss.csv
scripts/: byebye-badclients-server.sh  byebye-badclients-supernode-template.txt  clients.sh  clients.slurm  deploy_n.sh  server.sh  superlink.sh
