# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byebye-badclients"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.20.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "leonkiss2912"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "byebye_badclients.server_app:app"
clientapp = "byebye_badclients.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
no-defense-fedavg = false
num-server-rounds = 35
fraction-fit = 0.1
local-epochs = 5
dataset = 'ylecun/mnist' # any of ['ylecun/mnist', 'ufldl-stanford/svhn', 'uoft-cs/cifar10']
total-max-samples = -1
non-iid = true
dirichlet-alpha = 0.3 # if non-iid == true
malicious-probability = 0.3
attack-patterns = 'update-scaling' # any of ['label-flipping', 'random-update', 'update-scaling', 'adaptive-attack'] and separate by comma
update-scaling-factor = 2
base-reliability-threshold = 0.5
alpha = 0.7
beta = 0.6
anomaly_threshold = 3.6
penalty_severity = 2
gamma = 0.3
delta = 0.4
recovery = 0.05
decay = 0.15
late-training-threshold = 0.6

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 100

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
