# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "byebye-badclients"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]==1.20.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "pandas==2.3.1",
    "scipy~=1.16.1",
    "numpy~=2.3.2",
    "scikit-learn~=1.7.1"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "anonymous"

# Point to your ServerApp and ClientApp objects
# Format: "<module>:<object>"
[tool.flwr.app.components]
serverapp = "byebye_badclients.server_app:app"
clientapp = "byebye_badclients.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
no-defense-fedavg = false
num-server-rounds = 25
fraction-fit = 0.2
fraction-evaluate = 0.8
local-epochs = 5
dataset = 'ylecun/mnist' # any of ['ylecun/mnist', 'ufldl-stanford/svhn', 'uoft-cs/cifar10', 'uoft-cs/cifar100']
total-max-samples = -1
non-iid = false
dirichlet-alpha = 0.5 # if non-iid == true
malicious-probability = 0.3
attack-patterns = 'label-flipping' # any of ['label-flipping', 'random-update', 'update-scaling', 'adaptive-attack', 'alie', 'statistical_mimicry'] and separate by comma
update-scaling-factor = 2
base-reliability-threshold = 0.5
alpha = 0.7
beta = 0.6
anomaly_threshold = 3.6
penalty_severity = 2
gamma = 0.3
delta = 0.4
recovery = 0.05
decay = 0.15
late-training-threshold = 0.6

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 10 virtual SuperNodes
[tool.flwr.federations.local-simulation]
options.num-supernodes = 100

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true


# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "localhost:9093"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
